[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
#You could specify a library name using the 'name' field. If not specified
#cargo will default to 'package.name'
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
reqwest = "0.11.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }